# docx-extractor

./: README.md  pyproject.toml
