[project]
name = "docx-extractor"
version = "0.1.0"
description = "Extract content and metadata from Word .docx files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
docx-extractor = "docx_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_extractor"]
